<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.sun.training.ut.exercise_ten.ui.ExerciseTenViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/user_information_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_8"
            app:cardElevation="@dimen/dp_4"
            app:contentPadding="@dimen/dp_16"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/user_title"
                    style="@style/Ex10Label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:gravity="center"
                    android:text="@string/ex_10_user_information"
                    android:textSize="@dimen/sp_18"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/Ex10Label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:text="@{viewModel.user.userName}"
                    android:background="@android:color/transparent"
                    android:textSize="@dimen/sp_18"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/member_label"
                    tools:text="@string/ex_10_user_name_default" />

                <TextView
                    android:id="@+id/member_label"
                    style="@style/Ex10Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ex_10_member_label"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/user_title"
                    tools:text="@string/ex_10_member_label" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/member"
                    style="?attr/spinnerStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_40"
                    app:selection="@{viewModel.user.classType}"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/user_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/service_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_8"
            app:cardElevation="@dimen/dp_4"
            app:contentPadding="@dimen/dp_16"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_information_layout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/service_title"
                    style="@style/Ex10Label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:gravity="center"
                    android:text="@string/ex_10_service_information_title"
                    android:textSize="@dimen/sp_18"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/price_title"
                    style="@style/Ex10Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:text="@string/ex_10_price_label"
                    android:textSize="@dimen/sp_18"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/service_title" />

                <EditText
                    android:id="@+id/price"
                    style="@style/Ex10Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="@dimen/dp_144"
                    android:padding="@dimen/dp_4"
                    android:gravity="end|center_vertical"
                    android:background="@drawable/custom_bg_rounded"
                    android:hint="@string/ex_10_price"
                    android:text="@={viewModel.subTotal}"
                    android:inputType="number"
                    android:layout_marginEnd="@dimen/dp_4"
                    android:focusable="true"
                    android:textSize="@dimen/sp_18"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/service_title" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/payment"
                    app:layout_constraintTop_toBottomOf="@+id/price"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="@dimen/dp_12"
                    android:text="@string/ex_10_payment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/info_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/dp_8"
            app:cardElevation="@dimen/dp_4"
            app:contentPadding="@dimen/dp_16"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/service_layout">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/ex_10_information"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </androidx.core.widget.NestedScrollView>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>